--- a/style.css
+++ b/style.css
@@ -7,35 +7,158 @@
 }
 
 body {
-    margin: 0;
+    margin: 0px 80px;
     padding: 0;
 }
 
 .navbar {
-    margin: 24px 80px;
+    margin: 24px 0px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    align-self: stretch;
 }
 
 .logo {
-    font-size: 36px;
-    font-weight: 700;
+    height: auto;
 }
 
 .nav-right {
     display: inline-flex;
-    gap: 10px;
+    align-items: center;
+    gap: 32px;
 }
 
 .nav-link {
-    padding: 4px 14px;
+    font-weight: 400;
+    font-size: 18px;
+    transition: all 0.1s linear;
+}
+
+.nav-link:hover {
+    transform: translateY(-2px);
+    color: orangered;
+}
+
+.section {
+    justify-content: space-between;
+    align-items: center;
+    display: flex;
+    height: 100vh;
+    margin: 40px 30px;
+}
+
+.sec-left {
+    display: flex;
+    width: 557px;
+    padding: 20px 0px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 32px;
+    flex-shrink: 0;
+}
+
+.form {
+    width: 420px;
+}
+
+
+.form>h1 {
+    margin: 12px 0px;
+    font-size: 56px;
+}
+
+.form>h4 {
+    margin: 0px;
     font-weight: 400;
     font-size: 18px;
 }
 
-.active {
-    border-radius: 100px;
+.inputs {
+    width: 362px;
+    margin-top: 32px;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 16px;
+    align-self: stretch;
+}
+
+.password,
+.email {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.password>label,
+.email>label {
+    padding: 0px 8px;
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.password>input,
+.email>input {
+    font-size: 14px;
+    font-weight: 400;
+    padding: 14px 16px;
+    display: flex;
+    align-self: stretch;
+    box-sizing: border-box;
+    width: 362px;
+    border-radius: 8px;
+    border: solid 1px #191924;
+    transition: all 0.1s linear;
+}
+
+.password>input:focus,
+.email>input:focus {
+    font-weight: 500;
+}
+
+.link {
+    font-weight: 700;
+    transition: all 0.1s linear;
+}
+
+.link:hover {
+    color: orangered;
+}
+
+.inputs>button {
     background-color: #191924;
     color: white;
+    font-size: 18px;
+    font-weight: 400;
+    padding: 14px 16px;
+    position: relative;
+    width: 362px;
+    border-radius: 8px;
+    border: none;
+    transition: all 0.1s linear;
+}
+
+.inputs>button:hover {
+    background-color: orangered;
+}
+
+.copyright {
+    gap: 8px;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.copyright>span {
+    font-size: 14px;
+    font-weight: 400;
+    transition: all 0.2s linear;
+    color: #727272;
+}
+
+.copyright>span:hover {
+    font-weight: 500;
+    color: orangered;
 }
