--- a/style.css
+++ b/style.css
@@ -146,6 +146,7 @@ body {
 
 .copyright {
     gap: 8px;
+    margin-bottom: 24px;
     align-items: center;
     display: flex;
     flex-direction: column;
